Add translation, pagination and mailer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,11 @@ a:hover {
 .alert-alert {
   @extend .alert-danger;
 }
+
+.first,
+.page,
+.prev,
+.next {
+  display: block;
+  padding-right: 1em;
+}
