--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,16 +1,2 @@
-<h1>Homes#index</h1>
-<p>Find me in app/views/homes/index.html.erb</p>
-<table class="table mt-5">
-  <thead>
-    <tr>
-      <th>Email</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.email %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h1>Deviceのお勉強</h1>
+<p>ルート画面</p>
