--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,12 +5,18 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
+            <%= link_to 'ユーザー一覧', users_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
             <%= link_to 'アカウント編集', edit_user_registration_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
           </li>
-        <% else %>
+          <li class="nav-item active">
+            <%= link_to '本を見る', books_path, class: 'nav-link' %>
+          </li>
+      <% else %>
           <li class="nav-item active">
             <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
           </li>
