--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,15 @@
 <table class="table mt-5">
   <thead>
   <tr>
-    <th>メールアドレス</th>
-    <th>詳細</th>
+    <th><%= t('.mailaddress') %></th>
+    <th><%= t('.details') %></th>
   </tr>
   </thead>
   <tbody>
   <% @users.each do |user| %>
     <tr>
       <td><%= user.email %></td>
-      <td><%= link_to 'ユーザー詳細へ', user %></td>
+      <td><%= link_to t('.to_user'), user %></td>
     </tr>
   <% end %>
   <%= paginate @users %>
