--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>アカウントを編集する</h2>
+<h2><%= t('.title') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -28,11 +28,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(パスワードの変更が必要ない場合は空で構いません)</i><br />
+    <%= f.label :password %> <i><%= t('.leave_blank_unless_change_password') %></i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> 文字以上でお願いします</em>
+      <em><%= @minimum_password_length %> <%= t('.minimum_length_alert') %></em>
     <% end %>
   </div>
 
@@ -42,18 +42,17 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(変更のために現在のパスワードをご入力ください)</i><br />
+    <%= f.label :current_password %> <i><%= t('.enter_your_password') %></i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
   <div class="actions">
-    <%#= f.submit "Update" %>
     <%= f.submit %>
   </div>
 <% end %>
 
-<p><%= button_to "更新をやめる", registration_path(resource_name), data: { confirm: "Are you sure?" }, method:
+<p><%= button_to t('.cancel'), registration_path(resource_name), data: { confirm: "Are you sure?" }, method:
   :delete
 %></p>
 
-<%= link_to "戻る", :back %>
+<%= link_to t('views.common.back'), :back %>
