--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<h1>ユーザー詳細画面</h1>
+<h1><%= t('.title') %></h1>
 
-<h3 class="mt-5">メールアドレス</h3>
+<h3 class="mt-5"><%= User.human_attribute_name(:email) %></h3>
 <%= @user.email %>
-<h3 class="mt-1">郵便番号</h3>
+<h3 class="mt-1"><%= User.human_attribute_name(:postal) %></h3>
 <%= @user.postal %>
-<h3 class="mt-1">住所</h3>
+<h3 class="mt-1"><%= User.human_attribute_name(:address) %></h3>
 <%= @user.address %>
-<h3 class="mt-1">自己紹介</h3>
+<h3 class="mt-1"><%= User.human_attribute_name(:description) %></h3>
 <%= @user.description %>
