Add translations to _header and index.html.erb

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <table class="table mt-5">
   <thead>
   <tr>
-    <th><%= t('.mailaddress') %></th>
+    <th><%= User.human_attribute_name(:email) %></th>
     <th><%= t('.details') %></th>
   </tr>
   </thead>
