--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,23 +5,24 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to 'ユーザー一覧', users_path, class: 'nav-link' %>
+            <%= link_to User.human_attribute_name(:index), users_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to 'アカウント編集', edit_user_registration_path, class: 'nav-link' %>
+            <%= link_to User.human_attribute_name(:edit), edit_user_registration_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <%= link_to User.human_attribute_name(:destroy), destroy_user_session_path, method: :delete, class:
+              'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to '本を見る', books_path, class: 'nav-link' %>
+            <%= link_to Book.human_attribute_name(:index), books_path, class: 'nav-link' %>
           </li>
       <% else %>
           <li class="nav-item active">
-            <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
+            <%= link_to User.human_attribute_name(:new), new_user_registration_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
+            <%= link_to User.human_attribute_name(:create), new_user_session_path, class: 'nav-link' %>
           </li>
         <% end %>
       </ul>
