--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,8 @@
 
 <p>
   <strong>写真</strong>
-  <%= image_tag @user.avatar, size: '320' %>
+  <%#= image_tag @user.avatar, class: 'user-avatar' %>
+  <%= image_tag @user.avatar.variant(resize_to_limit: [400, 400]) %>
 </p>
 
 <p>
